<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_padding_20"
            android:gravity="center"
            android:text="@string/title_app"
            android:textAppearance="@style/bodyBlack24Text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/OutlinedRoundedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16"
            android:layout_marginTop="@dimen/margin_padding_50"
            android:layout_marginEnd="@dimen/margin_padding_16"
            android:hint="@string/user"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLength="46"
                android:text="jose123@gmail.com"
                android:textAppearance="@style/bodyBlack15Text"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/OutlinedRoundedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16"
            android:layout_marginTop="@dimen/margin_padding_20"
            android:layout_marginEnd="@dimen/margin_padding_16"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="8"
                android:text="Qwert123"
                android:textAppearance="@style/bodyBlack15Text"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/accept_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_padding_16"
            android:layout_marginTop="@dimen/margin_padding_20"
            android:layout_marginEnd="@dimen/margin_padding_16"
            android:background="@drawable/bg_line_gray"
            android:enabled="true"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textSize="@dimen/font_16" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_padding_16"
            android:layout_marginTop="@dimen/margin_padding_20"
            android:layout_marginEnd="@dimen/margin_padding_16"
            android:background="@drawable/bg_line_gray"
            android:enabled="true"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="@dimen/font_16" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
