<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/balanceCardView"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_card_payments"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView_card_logo"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/shape_card_payments_photo"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <TextView
                            android:id="@+id/tv_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="10dp"
                            android:letterSpacing="0.18"
                            android:text="@string/card_initial_number"
                            android:textColor="@color/grey"
                            android:textSize="17sp" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal"
                            android:weightSum="10">


                            <TextView
                                android:id="@+id/tv_name"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="8"
                                android:letterSpacing="0.18"
                                android:text="@string/card_initial_name"
                                android:textColor="@color/grey"
                                android:textSize="12sp"
                                app:layout_constraintTop_toBottomOf="@id/tv_card"
                                tools:ignore="MissingConstraints" />

                            <TextView
                                android:id="@+id/yearTextView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="@string/card_initial_date"
                                android:textColor="@color/grey"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextCardHolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_20"
            android:hint="Nombre del Tarjetahabiente" />

        <EditText
            android:id="@+id/editTextCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Número de Tarjeta"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextExpirationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Fecha de Expiración (MM/AA)" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>